[package]
name = "rs_graph_hash"
version = "0.1.0"
edition = "2021"
authors = ["Davide Monti <d.monti11@campus.unimib.it>", "Nada Mohamed <n.mohamed3@campus.unimib.it>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.16", features = ["derive"] }
gfa = "0.8.0"
handlegraph = "0.5.0"
bit-vec = "0.6"
bio = "1.3.1"
rayon = "1.7.0"
