[package]
name = "rs_graph_hash"
version = "0.1.0"
edition = "2021"
authors = ["Davide Monti <d.monti11@campus.unimib.it>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.16", features = ["derive"] }
gfa = "0.8.0"
handlegraph = "0.5.0"
bit-vec = { version = "0.6", features = ["serde"] }
bio = "0.32"
rayon = "1.7.0"
syntect = "5.1.0"
serde = { version = "1.0", features = ["derive"] }
rustc-hash = {version = "1.1.0"}
recgraph = { git = "https://github.com/AlgoLab/RecGraph" }
fxhash = "0.2.1"
priority-queue = "1.3.2"